# hull

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  TODO.md
.github/workflows/: ci.yml
scripts/: extract_convex_function_return_types.mjs
src/: main.rs
src/typegen/: extract_convex_function_return_types.mjs  mod.rs  naming.rs  rust_api.rs  tests.rs
tests/fixtures/: README.md
tests/fixtures/basic/: return_types.json
tests/fixtures/basic/convex/: messages.ts  schema.ts  validators.ts
tests/fixtures/http_actions_routes/: return_types.json
tests/fixtures/http_actions_routes/convex/: ai.ts  billing.ts  http.ts
tests/fixtures/no_validators_shorthand_local_internal/: return_types.json
tests/fixtures/no_validators_shorthand_local_internal/convex/: schema.ts  tasks.ts
tests/fixtures/returns_doc_id_shapes/: return_types.json
tests/fixtures/returns_doc_id_shapes/convex/: posts.ts  schema.ts  validators.ts
tests/fixtures/returns_nested_modules/: return_types.json
tests/fixtures/returns_nested_modules/convex/: schema.ts  validators.ts
tests/fixtures/returns_nested_unions/: return_types.json
tests/fixtures/returns_nested_unions/convex/: jobs.ts  schema.ts  validators.ts
tests/fixtures/schema_keywords/: return_types.json
tests/fixtures/schema_keywords/convex/: schema.ts  (+2 more)
tests/fixtures/schema_primitives/: return_types.json
tests/fixtures/schema_spreads/: return_types.json
tests/fixtures/schema_table_chains/: return_types.json
tests/fixtures/schema_unions/: return_types.json
(+60 files in other folders)
