[package]
name = "hull"
version = "0.1.0"
edition = "2021"
description = "Generate strongly typed Swift and Rust code from a Convex schema and functions."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["convex", "codegen", "typescript", "swift", "rust"]
repository = "https://github.com/achimala/hull"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indexmap = "2"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "1.0.149"
swc_common = "18.0.1"
swc_ecma_ast = "19.0.0"
swc_ecma_parser = "32.0.0"
